# seion

./: .gitignore  Cargo.toml  README.md
src/: main.rs  preview.rs
src/app/: dispatch.rs  mod.rs
src/cache/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/discord/: mod.rs
src/downloads/: mod.rs
src/lyrics/: mod.rs
src/models/: mod.rs
src/player/: mod.rs  mpv.rs
src/theme/: mod.rs
src/ui/: header.rs  help.rs  home.rs  library.rs  lyrics.rs  mod.rs  now_playing.rs  player_bar.rs  queue.rs  rain.rs  search.rs  settings.rs  splash.rs  visualizer.rs
src/utils/: mod.rs
src/widgets/: input.rs  mod.rs  popup.rs  progress.rs  track_list.rs
src/youtube/: mod.rs
